# CO3103

./: .env.example  .gitignore  DEPLOY.md  Hello  NotSaved  PROJECT_STRUCTURE.md  README.md  index.html  index.js  khoatest1  nixpacks.toml  package-lock.json  package.json  railway.json  requirements.txt  start.bat  start.ps1  start.py  start_servers.py  tsconfig.json  vite.config.js  vite.config.ts
Backend/: api_views.py  models.py  requirements.txt  services.py  settings.py  urls.py
Backup/: App.css  App.jsx  AppTT.css  AppTT.jsx
backend/: .env.example  Procfile  create_superuser.py  initial.py  initial_venv.py  load_fixtures.py  make_and_migrate.py  nixpacks.toml  pyproject.toml  railway.json  requirements-postgres.txt  requirements.txt  start.py
backend/jobfinder/: admin.py  models.py  serializers.py  urls.py  views.py
backend/jobfinder/fixtures/: 01_lookups_basic.json  02_lookups_district.json  03_lookups_province.json  03_lookups_ward_part1.json  03_lookups_ward_part2.json  03_lookups_ward_part3.json  jobfinder_lookups.json
backend/jobfinder/migrations/: 0001_initial.py  0002_alter_currency_options_alter_jobtype_options_and_more.py  0003_application.py
backend/main/: settings.py
backend/users/: apps.py  models.py  serializers.py  urls.py  views.py
backend/users/fixtures/: users_lookups.json
backend/users/migrations/: 0001_initial.py  0004_profile_cv_profile_cv_filename.py  0005_alter_gender_options_alter_role_options_and_more.py  0006_status_color_status_icon.py
frontend/: .env.example  package-lock.json  tailwind.config.ts  vercel.json
(+86 files in other folders)
